Update java execution parameters.